[tool.poetry]
name = "pinnwand"
version = "1.4.0"
description = "Straightforward pastebin software."
authors = ["Simon de Vlieger <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pastebin", "python", "tornado"]
repository = "https://github.com/supakeen/pinnwand"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
packages = [
    { include = "pinnwand", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
tornado = "^6.1"
pygments = "^2.11"
sqlalchemy = "^1.4"
click = "^8.0"
docutils = "^0.17"
pygments-better-html = "^0.1.0"
token-bucket = "^0.3.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
coverage = "^6.3"
black = "^22.3"
pytest-cov = "^3.0"
pre-commit = "^2.18"
flake8 = "^4.0"
mypy = "^0.942"
types-docutils = "^0.19.1.1"
isort = "^5.10.1"

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
pinnwand = 'pinnwand.__main__:main'

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.6"
platform = "linux"

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true

# The following are off by default.  Flip them on if you feel
# adventurous.
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
